<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/my_devices" />
        <item
            android:id="@+id/nav_qrscan"
            android:icon="@drawable/ic_qr"
            android:title="@string/scan_code" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="TBD" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share (Under construction)" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="About (Under construction)" />
        </menu>
    </item>

</menu>
